# Plector

./: .env.example  .gitignore  .pre-commit-config.yaml  00_CHANGELOG.md  00_INDEX.md  00_INDEX_综合研究索引.md  00a_规范_技术定义.md  00b_评估_亮点与短板.md  01_核心模块_实现.md  02_核心模块_后续三步.md  03_Harness_工程指南.md  04_完整开发指令.md  05_AgentLoop_ContextBuilder.md  06_LLM_多后端支持.md  07_v1.0_对齐业内标准.md  08_v1.0_对齐业内标准_文档同步.md  09_v1.0_Harness完善.md  100_AI_Agent评估与可观测性研究.md  101_AI_Agent安全最佳实践研究.md  102_Plector未来升级改造演进方案.md  103_Plector深度技术分析报告.md  104_Plector_v2.x_详细实施计划.md  105_Plector功能联动融合方案.md  106_Plector最终实施计划方案.md  107_Plector代码审核报告.md  10_v1.0_完成.md  110_v2.x_重构优化计划.md  111_Claude_Code_联网能力方案.md  112_个人场景功能评估.md  113_闭环系统实现分析.md  114_综合研究索引_深度分析.md  115_AI_Agent开发方法论矩阵_从单兵到军团.md  11_v1.0.0_版本.md  12_v1.0_系统状态评估.md  13_v1.0_端到端测试.md  14_v1.0_技能扩展_1.md  15_v1.0_技能扩展_2.md  16_v1.1_MCP_Client实现.md  17_v1.1_MCP_Server实现.md  18_v1.1_MCP_Server安全修复.md  (+114 more)
.obsidian/: graph.json  workspace.json
.specs/: chat-ui-optimization-plan.md
04_记忆系统/: 80_记忆系统-艾宾浩斯遗忘曲线.md  81_记忆系统-联想式记忆.md  82_记忆系统-联想式记忆v2.md  83_记忆系统-联想式记忆v3.md  84_记忆系统-联想式记忆最终版补丁.md  85_记忆系统-联想式记忆最终版.md
05_对比分析/: 86_Plector-vs-OpenClaw差距分析.md
06_规划/: 87_Plector-灵魂文件系统实现方案.md
90_Chat_UI/: 91_对话界面最终规范.md  92_Chat_页面补全方案.md  93_Agent前端页面分类速查.md  Chat_Page_Analysis_20260422.md  Chat_Page_Repair_Summary_20260422.md
channels/: chat.html  chat_legacy.html  cli.py  dashboard.html  websocket.py
config/: alerts.yaml  closed_loops.yaml  config.yaml  logging_config.yaml  roles.yaml
core/: __init__.py  _disabled_config_manager_PHASE3.py  _disabled_docs_generator_PHASE3.py  _disabled_role_switcher_PHASE3.py  agent_loop.py  closure_engine.py  config_loader.py  content_filter.py  context_builder.py  conversation_store.py  error_handler.py  event_bus.py  event_bus_v2.py  function_calling.py  governance.py  image_handler.py  image_router.py  llm_client.py  llm_client_anthropic.py  llm_client_base.py  llm_client_minimax.py  llm_client_ollama.py  llm_client_openai.py  llm_client_v2.py  mcp_client.py  mcp_manager.py  memory_loader.py  metrics.py  middleware_chain.py  path_manager.py  plugin_system.py  rate_limiter.py  skill_handler.py  skill_loader.py  skill_registry.py  skill_sandbox.py  telemetry.py  vector_memory.py  vector_memory_v2.py  workflow_graph.py
docs/: ARCHITECTURE_DESIGN.md  Agency_Orchestrator_使用指南.md  DOCS_INDEX.md  PLECTOR_SKILLS.md  Plector_介绍.html  Plector_介绍.md  SECRETS.md  SKILL_DESIGN_PRINCIPLES.md  STREAMING_IMPLEMENTATION.md  SYNCHRONIZATION_MECHANISM.md  performance.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
output/: Plector_PPT.html  Plector_PPT.md  plector_ppt_outline.md
scripts/: check_dependencies.py  check_function_length.py  check_secrets.py  check_skills.py  cleanup_cache.py  cleanup_disabled.py  delete_roles_dir.py  generate_plector_ppt.py  generate_readme.py  git_commit.py  git_status.py  reuse_analysis.md  run_upgrade.py  start_server.ps1  validate_skills.py
servers/: filesystem_server.py  http_filesystem_server.py  init_memory_db.py  sqlite_server.md  sqlite_server.py
tests/: conftest.py  test_agent_loop.py  test_closure_engine.py  test_config_loader.py  test_content_filter.py  test_context_builder.py  test_context_refresher.py  test_context_refresher_handler.py  test_conversation_store.py  test_error_handler.py  test_event_bus.py  test_event_bus_v2.py  test_function_calling.py  test_governance.py  test_image_backends.py  test_image_config.py  test_image_handler.py  test_image_router.py  (+27 more)
(+204 files in other folders)
