[project]
name = "plector"
version = "2.0.0"
description = "Event-driven AI Agent Engine with skill governance and self-healing"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "skills*", "tools*", "channels*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort（导入排序）
    "N",    # pep8-naming（命名规范）
    "UP",   # pyupgrade（Python 版本升级建议）
    "B",    # flake8-bugbear（常见 bug）
    "SIM",  # flake8-simplify（代码简化）
    "RUF",  # ruff 自有规则
]
ignore = [
    "E501",   # 行长度（由 line-length 控制）
    "N812",   # 允许 import lowercase as Uppercase
    "SIM108", # 允许三元表达式替代 if/else
    "RUF002", # 中文项目允许中文标签
    "RUF003", # 中文项目允许中文标签
    "RUF013", # 允许隐式 Optional
    "RUF015", # 允许单元素切片
    "RUF001", # 字符串中包含中文标签
    "B007",   # 允许未使用的循环变量
    "RUF006", # 允许不存储 asyncio.create_task 引用（fire-and-forget）
]

[tool.ruff.lint.isort]
known-first-party = ["core", "skills", "tools", "channels"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# Windows 修复：禁用 capture 插件避免 closed stdout/stderr 问题
addopts = "-p no:capture"
# 添加项目根目录到 Python 路径
pythonpath = ["."]
testpaths = ["tests"]
