[project]
name = "plector"
version = "1.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort（导入排序）
    "N",    # pep8-naming（命名规范）
    "UP",   # pyupgrade（Python 版本升级建议）
    "B",    # flake8-bugbear（常见 bug）
    "SIM",  # flake8-simplify（代码简化）
    "RUF",  # ruff 自有规则
]
ignore = [
    "E501",   # 行长度（由 line-length 控制）
    "N812",   # 允许 import lowercase as Uppercase
    "RUF002", # 中文项目允许中文标点
    "RUF003", # 中文项目允许中文标点
    "RUF001", # 允许字符串中包含中文标点
    "RUF006", # 允许不存储 asyncio.create_task 引用（fire-and-forget）
]

[tool.ruff.lint.isort]
known-first-party = ["core", "skills", "tools", "channels"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
